cluster/apps/utilities/spegel/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spegel
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: baseline
